Fixed message alignment and added placeholder text for the inputbox

--- a/public/index.css
+++ b/public/index.css
@@ -47,6 +47,7 @@ body
 
 .email_submit_line td {
 	width: 400px;
+	vertical-align:middle;
 	}
 	
 #invalid_message {
@@ -127,26 +128,17 @@ body
 {
     margin-top: 14px;
     width: 450px;
+    color:#909090;
 }
 
 .email_responses {
-    padding: 0px 105px;
-    }
+    padding: 0px 28px;
+}
 
-#invalid_message {
-    font-size: 12px;
-    color: red;
-    }
-    
-#already_subscribed_message {
-    font-size: 12px;
-    color: red;
-    }
-
-#confirm_message {
-    font-size: 12px;
+#message {
+    font-size: 13px;
     color: #F7941D;
-    }    
+}    
     
 .button
 {
@@ -168,7 +160,7 @@ body
     height: 24px;
     border: 0px;
     background: #E3E3E3;
-    color: #444444;
+    color: #A0A0A0;
 }
 /*
 .expand_box {
